--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: PurplePurplePurplePurple/byggekirke
-  branch: main
+  branch: master
 
 media_folder: "public/uploads"
 public_folder: "/uploads"
