--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,7 +1,8 @@
 backend:
-  name: github
+  name: git-gateway
   repo: PurplePurplePurplePurple/byggekirke
   branch: master
+
 
 media_folder: "public/uploads"
 public_folder: "/uploads"
