--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -17,15 +17,16 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
 
-      - label: "Categories"
-        name: "categories"
-        widget: "select"
-        multiple: true
-        options:
-          - Tech
-          - Design
-          - Tutorials
-          - Downloads
+      
+      
+      - {label: "Kategorier", name: "tags", widget: "select", multiple: true, options: [
+          "Bibelteologi & nytestamentlige temaer",
+          "Ekklesiologi & menighetsutvikling",
+          "Evangelikal teologi & frimenighetsbevegelser",
+          "Spiritualitet & karismatikk"
+        ]}
+
+          
 
       - { label: "Featured Image", name: "image", widget: "image", required: false }
       - { label: "Downloadable File", name: "file", widget: "file", required: false }
